文案修改 bug修复

--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -33,11 +33,11 @@
                 <div class="m-body">
                     <div role="tabpanel" class="m-pane active" id="schedule">
                         <div class="schedule-container">
-                            <div class="m-pane-title">
-                                <p>我是炫酷的标题文字：</p>
-                                <p>The words can only tell a part of the sights, and everything you will see is far beyong your imagination.</p>
-                                <p>Words can tell nothing, what we can promise is that everything is far beyong your imagination.</p>
-                            </div>
+                            <!--<div class="m-pane-title">-->
+                                <!--<p>我是炫酷的标题文字：</p>-->
+                                <!--<p>The words can only tell a part of the sights, and everything you will see is far beyong your imagination.</p>-->
+                                <!--<p>Words can tell nothing, what we can promise is that everything is far beyong your imagination.</p>-->
+                            <!--</div>-->
                             <div class="m-pane-body">
                                 <div class="m-pane-section">
                                     <img src="../../img/images/schedule/xingcheng1.png" >
@@ -253,12 +253,12 @@
                     <div role="tabpanel" class="m-pane" id="service">
                         <div class="service__container">
                             <div class="m-pane-title">
-                                <p>我们的中国之行所需的花费为<label class="fee">€2699</label>：</p>
-                                <p>这个超值的价格包括了以下多种服务：</p>
+                                <p>Nous vous assurer d'un service de première qualité：</p>
+                                <!--<p>我们的中国之行所需的花费为<label class="fee">€2699</label>：</p>-->
                             </div>
                             <div class="m-pane-body">
                                 <div class="m-pane-section">
-                                    <p class="service-item-title">1. 交通与出行</p>
+                                    <p class="service-item-title">1. Transport</p>
                                     <div class="service-item-body">
                                         <p>我们将承担您在旅途中产生的机票、火车、汽车巴士等交通出行费用。</p>
                                         <div class="service-item-detail">
@@ -270,17 +270,17 @@
                                 </span>
                                             <img src="../../img/images/service/1_train_178_178.png" />
                                             <span class="service-item-brief three-item">
-                                    我们将乘坐高铁一等座从凤凰古城返回武汉。<br>
+                                                TGV première classe Fenghuang-Wuhan<br>
                                 </span>
                                             <img src="../../img/images/service/1_bus_178_178.png" />
                                             <span class="service-item-brief three-item">
-                                    接机、送机、往返景点，将由专门的巴士进行接送。<br>
+                                    Le bus transfert entre L’aéroport, l’hôtel et le site.<br>
                                 </span>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="m-pane-section">
-                                    <p class="service-item-title">2. 住宿与餐饮</p>
+                                    <p class="service-item-title">2. Hôtel et restaurant</p>
                                     <div class="service-item-body">
                                         <p>我们将在旅途里为您提供舒适星级住宿与美味的当地风味食物。</p>
                                         <div class="service-item-detail">
@@ -312,24 +312,24 @@
                                     </div>
                                 </div>
                                 <div class="m-pane-section">
-                                    <p class="service-item-title">4. 丰富的目的地游乐活动</p>
+                                    <p class="service-item-title">4. Une foule d'activités</p>
                                     <div class="service-item-body">
-                                        <p>我们为您策划了多种目的地游乐活动以丰富您的旅程，并让您深度体验不同的文化。</p>
+                                        <p>Nous vous plan plusieurs activité pour enrichir votre voyage et expérience la différente culture.</p>
                                         <div class="service-item-detail">
                                             <img src="../../img/images/service/4_cablecar_178_178.png" />
                                             <span class="service-item-brief three-item">
-                                            <p>缆车：</p>
-                                            <p>空中鸟府云雾中的奇山。</p>
+                                            <p>Le téléphérique :</p>
+                                            <p>On peut commander les monts.</p>
                                         </span>
                                             <img src="../../img/images/service/4_ship_178_178.png" />
                                             <span class="service-item-brief three-item">
-                                            <p>游船：</p>
-                                            <p>水上感受城市的风光。</p>
+                                            <p>Le bateau :.</p>
+                                            <p>Donné une vision d'une ville sur l’eau</p>
                                         </span>
                                             <img src="../../img/images/service/4_show_178_178.png" />
                                             <span class="service-item-brief three-item">
-                                            <p>演出：</p>
-                                            <p>用表演的形式多元化地呈现中国文化。</p>
+                                            <p>Le spectacle :</p>
+                                            <p>Présenté la culture chinoise</p>
                                         </span>
                                         </div>
                                     </div>
@@ -374,16 +374,13 @@
                                         <div class="m-hotel-detail">
                                             <div class="hotel-detail-lside">
                                                 <div class="hotel-image">
-                                                    <img src="../../img/images/hotels/5.1.1.png" alt="">
+                                                    <img src="../../img/images/hotels/5.1.4.png" alt="">
                                                 </div>
                                                 <div class="hotel-image">
                                                     <img src="../../img/images/hotels/5.1.2.png" alt="">
                                                 </div>
                                                 <div class="hotel-image">
                                                     <img src="../../img/images/hotels/5.1.3.png" alt="">
-                                                </div>
-                                                <div class="hotel-image">
-                                                    <img src="../../img/images/hotels/5.1.4.png" alt="">
                                                 </div>
                                             </div>
                                             <div class="hotel-detail-rside">
@@ -420,7 +417,24 @@
                                             </div>
                                         </div>
                                         <div class="m-hotel-detail">
-
+                                            <div class="hotel-detail-lside">
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel2-1.jpg" alt="">
+                                                </div>
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel2-4.jpg" alt="">
+                                                </div>
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel2-3.jpg" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="hotel-detail-rside">
+                                                <p class="hotel-brief">Royal Suits & Towers est un hôtel de luxe 5 étoiles pourvu d'une piscine intérieure, d'une salle de sport, ainsi que d'une connexion Wi-Fi gratuite dans la chambre.
+                                                    Ce quartier (Jiang An) est un choix idéal pour les voyageurs qui s'intéressent à ces thèmes : le shopping, les lacs et les paysages.
+                                                </p>
+                                                <p class="hotel-brief">Le Q-café propose de copieux petits-déjeuners, ainsi qu'une cuisine internationale.</p>
+                                                <p class="hotel-brief">L’hôtel a une cave privée pour goûter aux plus fameuses productions.</p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="m-hotel-body">
@@ -451,7 +465,22 @@
                                             </div>
                                         </div>
                                         <div class="m-hotel-detail">
-
+                                            <div class="hotel-detail-lside">
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel5-1.jpg" alt="">
+                                                </div>
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel5-2.jpg" alt="">
+                                                </div>
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel5-3.jpg" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="hotel-detail-rside">
+                                                <p class="hotel-brief">Situé à l'entrée du Zhangjijie National Park Hotel c'est l'un de la plupart des visiteurs. Les chambres sont spacieuses, propres et très confortables, ce qui gâche cet hôtel ; elle est elle est le manque d'équipements et de services pour les clients occidentaux. Un hôtel de 5 étoiles et d'une connexion Wi-Fi gratuite.</p>
+                                                <!--<p class="hotel-brief">酒店有356间设备豪华的客房及套房。贵宾楼层为宾客提供不受打扰的私人空间，以及独家尊享服务和特别礼遇。</p>-->
+                                                <!--<p class="hotel-brief">酒店的餐厅确保所有宾客均能获得极致的味蕾享受。中西茗茶、精致粤菜、各式亚洲及国际佳肴，均能带给宾客难忘的美食体验。</p>-->
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -483,7 +512,22 @@
                                             </div>
                                         </div>
                                         <div class="m-hotel-detail">
-
+                                            <div class="hotel-detail-lside">
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel4-1.jpg" alt="">
+                                                </div>
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel4-2.jpg" alt="">
+                                                </div>
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel4-3.jpg" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="hotel-detail-rside">
+                                                <p class="hotel-brief">C’est un hôtel traditionnel proche des sites, au pied de la Tianmenshan.</p>
+                                                <p class="hotel-brief">.Ce quartier (Yong Ding) est un choix idéal pour les voyageurs qui s'intéressent à ces thèmes : les visites, la nature et les balades dans la nature. Cet établissement a également été bien noté pour son excellent emplacement à Zhangjiajie ! Les clients en sont plus satisfaits en comparaison avec d'autres établissements dans cette ville.</p>
+                                                <!--<p class="hotel-brief">酒店的餐厅确保所有宾客均能获得极致的味蕾享受。中西茗茶、精致粤菜、各式亚洲及国际佳肴，均能带给宾客难忘的美食体验。</p>-->
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="m-hotel-body">
@@ -511,7 +555,22 @@
                                             </div>
                                         </div>
                                         <div class="m-hotel-detail">
-
+                                            <div class="hotel-detail-lside">
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel3-1.jpg" alt="">
+                                                </div>
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel3-2.jpg" alt="">
+                                                </div>
+                                                <div class="hotel-image">
+                                                    <img src="../../img/images/hotels/hotel3-4.jpg" alt="">
+                                                </div>
+                                            </div>
+                                            <div class="hotel-detail-rside">
+                                                <p class="hotel-brief">L’hôtel se trouve au centre de la ville, il y a maintenant 10 ans que le patron Mme.LIN a investi pour la réalisation de cet établissement.</p>
+                                                <p class="hotel-brief">Doté d'une connexion Wi-Fi gratuite, l'établissement Dengnilai propose un hébergement élégant à Fenghuang avec les matériels premiums. Offrant une vue sur les montagnes, le pont Hong, il possède un bar, Vous pouvez prendre vos repas au restaurant sur place ou boire un verre au bar. Et Les chambres disposent toutes d'une télévision par câble à écran plat.</p>
+                                                <!--<p class="hotel-brief">酒店的餐厅确保所有宾客均能获得极致的味蕾享受。中西茗茶、精致粤菜、各式亚洲及国际佳肴，均能带给宾客难忘的美食体验。</p>-->
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
