界面修改 图片更换

--- a/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
@@ -9,11 +9,11 @@
     <div class="home-page">
         <header class="t-nav">
             <ul class="left-title">
-                <li><a href="index.html" class="active">TITLE</a></li>
+                <li><a href="index.html" class="active"><img src="../../img/images/others/HOME.png"></a></li>
             </ul>
             <ul class="right-title">
-                <li><a href="more.html">MORE</a></li>
-                <li>CONTACT</li>
+                <li><a href="more.html"><img src="../../img/images/others/MORE.png"></a></li>
+                <li><img src="../../img/images/others/CONTACT.png"></li>
             </ul>
         </header>
         <section class="home-img-area">
@@ -21,12 +21,12 @@
         </section>
         <section class="home-section section-one">
             <div class="home-section-body">
-                <p class="home-brief-title">我是炫酷的标题</p>
+                <p class="home-brief-title">sous titre</p>
                 <p class="home-brief-text">
-                    我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容
+                    <!--我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容-->
                 </p>
                 <p class="home-brief-text">
-                    我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容。
+                    La Chine s'affiche comme une destination hors du commun, avec un patrimoine culturel et naturel incomparablement riche et varié. Nous explorons cette Chine hétéroclite au centre de la Chine, et découvrons les multiples facettes de cette destination tradition. De Wuhan à Zhangjiajie, en passant par Fenghuang, ce voyage est une découverte complète de tous les mystères de la Chine.
                 </p>
             </div>
         </section>
