--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -9,47 +9,49 @@
     <div class="container">
         <header class="t-nav">
             <ul class="left-title">
-                <li><a href="index.html" >TITLE</a></li>
+                <li><a href="index.html" ><img src="../../img/images/others/HOME.png"></a></li>
             </ul>
             <ul class="right-title">
-                <li><a href="more.html" class="active">MORE</a></li>
-                <li>CONTACT</li>
+                <li><a href="more.html" class="active"><img src="../../img/images/others/MORE.png"></a></li>
+                <li><img src="../../img/images/others/CONTACT.png"></li>
             </ul>
         </header>
         <section class="t-body">
             <div class="m-brief">
-                <p class="m-brief-title">奇幻之旅，由此开始。</p>
-                <p class="m-brief-content">此处还需要一些装饰文本</p>
+                <!--<p class="m-brief-title">奇幻之旅，由此开始。</p>-->
+                <img src="../../img/images/others/3.png">
+                <p class="m-brief-content"></p>
                 <a class="m-brief-btn" href="../../screens/order/orderPay.html"><label>€2699</label>即刻启动▶</a>
             </div>
             <div class="m-container">
                 <ul class="m-nav" role="tablist">
-                    <li role="presentation" class="active"><a href="#schedule" role="tab" data-toggle="tab" data-bg="0">行程</a></li>
-                    <li role="presentation"><a href="#viewpoint" role="tab" data-toggle="tab" data-bg="1">景点</a></li>
-                    <li role="presentation"><a href="#service" role="tab" data-toggle="tab" data-bg="2">服务</a></li>
-                    <li role="presentation"><a href="#hotel" role="tab" data-toggle="tab" data-bg="3">酒店</a></li>
-                    <li role="presentation"><a href="#comment" role="tab" data-toggle="tab" data-bg="4">驴友评价</a></li>
+                    <li role="presentation" class="active"><a href="#schedule" role="tab" data-toggle="tab" data-bg="0"><img src="../../img/images/others/plan.png"></a></li>
+                    <li role="presentation"><a href="#viewpoint" role="tab" data-toggle="tab" data-bg="1"><img src="../../img/images/others/site.png"></a></li>
+                    <li role="presentation"><a href="#service" role="tab" data-toggle="tab" data-bg="2"><img src="../../img/images/others/Prix.png"></a></li>
+                    <li role="presentation"><a href="#hotel" role="tab" data-toggle="tab" data-bg="3"><img src="../../img/images/others/hotel.png"></a></li>
+                    <li role="presentation"><a href="#comment" role="tab" data-toggle="tab" data-bg="4"><img src="../../img/images/others/Voyageurs.png"></a></li>
                 </ul>
                 <div class="m-body">
                     <div role="tabpanel" class="m-pane active" id="schedule">
                         <div class="schedule-container">
-                            <!--<div class="m-pane-title">-->
+                            <div class="m-pane-title">
+                                <img src="../../img/images/others/1.png">
                                 <!--<p>我是炫酷的标题文字：</p>-->
-                                <!--<p>The words can only tell a part of the sights, and everything you will see is far beyong your imagination.</p>-->
-                                <!--<p>Words can tell nothing, what we can promise is that everything is far beyong your imagination.</p>-->
-                            <!--</div>-->
+                                <!--<p>Nous vous invitons à vivre les séjours luxe ainsi que les circuits à deux, en famille ou entre amis, à rythme de confort d'un véhicule privé ou TGV premium class, avec guide et chauffeur, hôtel haut de gamme.</p>-->
+                            </div>
                             <div class="m-pane-body">
                                 <div class="m-pane-section">
                                     <img src="../../img/images/schedule/xingcheng1.png" >
                                     <div class="schedule-item-body">
-                                        <p>法国时间15:30飞机出发，直飞武汉。</p>
+                                        <p>Paris-Wuhan  15：30 Vol direct。</p>
                                     </div>
                                 </div>
                                 <div class="m-pane-section">
                                     <img src="../../img/images/schedule/xingcheng2.png" >
                                     <div class="schedule-item-body">
-                                        <p>北京时间08：40到达武汉，入住武汉马可波罗酒店。</p>
-                                        <p>下午：休息，晚上乘坐游船游览波尔多事twins city武汉两江。</p>
+                                        <p>Arrive à Wuhan 08 :40 et transfert en bus tout confort climatisé (Environ 1H) installation à votre hôtel au hôtel Marco polo.</p>
+                                        <p>Promenade dans la vieille ville et visite fleuve de Yangz et la rivière Han par bateau (Environ 2H30).</p>
+                                        <p>Déjeuner en cours de visite. Dîner et nuit à Wuhan. Wuhan est la ville jumelle avec Bordeaux et Essonne.</p>
                                     </div>
                                 </div>
                                 <div class="m-pane-section">
@@ -60,9 +62,10 @@
                                             Day3
                                         </span>
                                             <div class="schedule-rside">
-                                                <p>感受中式特色早餐，乘坐两小时飞机从武汉至张家界</p>
-                                                <p>下午游览土家风情园</p>
-                                                <p>晚上参观中国唯一金牌大奖大型山水实景《天门狐仙》话剧</p>
+                                                <p>Savourer petit déjeuner chinois traditionnel.</p>
+                                                <p>Transfert à Zhangjiajie en avion (Environ 2H).</p>
+                                                <p>Promenade dans le Parc culturel de l'ethnie Tujia.</p>
+                                                <p>Regardez le spectacle « Le renard du Mont Tianmen ».</p>
                                             </div>
                                         </div>
                                         <div class="schedule-item-section">
@@ -70,8 +73,9 @@
                                             Day4
                                         </span>
                                             <div class="schedule-rside">
-                                                <p>上午游览“世界最美丽的峡谷”---金鞭溪景</p>
-                                                <p>下午游玩世界自然遗产的核心---袁家界景区</p>
+                                                <p>Le matin visiter the « Plus beau vallée du monde » -Jinbian ruisseau.</p>
+                                                <p>L’après midi vous passerez notamment par le fameux site de Yuanjiajie, par un impressionnant pont suspendu </p>
+                                                <p>(Tiansheng Qiao). </p>
                                             </div>
                                         </div>
                                         <div class="schedule-item-section">
@@ -79,8 +83,9 @@
                                             Day5
                                         </span>
                                             <div class="schedule-rside">
-                                                <p>上午游玩张家界景区最漂亮的地方杨家界景区</p>
-                                                <p>下午游览“扩大的盆景，缩小的仙境”有峰林之王称号的---天子山景区</p>
+                                                <p>Promenade à Yangjiajie le matin. La réserve naturelle de Yangjiajie est située du côté ouest du parc de</p>
+                                                <p>Wulingyuan,c'est l’une des 4 réserves naturelles se distinguant au sein du parc.</p>
+                                                <p>L’après midi visiter Tianzi Shan est l’endroit idéal où se plonger en pleine nature.</p>
                                             </div>
                                         </div>
                                         <div class="schedule-item-section">
@@ -88,8 +93,8 @@
                                             Day6
                                         </span>
                                             <div class="schedule-rside">
-                                                <p>上午自由活动</p>
-                                                <p>下午游览黄龙洞</p>
+                                                <p>Le matin libre.</p>
+                                                <p>Visiter la Grotte du Dragon Jaune l’après midi.</p>
                                             </div>
                                         </div>
                                         <div class="schedule-item-section">
@@ -97,8 +102,9 @@
                                             Day7
                                         </span>
                                             <div class="schedule-rside">
-                                                <p>上午游览天门山国家森林公园</p>
-                                                <p>下午前往凤凰古城</p>
+                                                <p>Promenade dans le parc national du Mont Tianmen le matin.</p>
+                                                <p>L’après midi pars à ville antique Fenghuang (littéralement : « district du phœnix ») est un district administratif de la</p>
+                                                <p>province du Hunan en Chine. Il est placé sous la juridiction de la préfecture autonome tujia et miao de Xiangxi.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -107,21 +113,21 @@
                                 <div class="m-pane-section">
                                     <img src="../../img/images/schedule/xingcheng4.png" >
                                     <span class="schedule-item-body">
-                                    <p>上午游览“凤凰古城”。</p>
-                                    <p>下午自由活动。</p>
+                                    <p>Visiter la ville Fenghuang le matin.</p>
+                                    <p>Libre l’après midi.</p>
                                 </span>
                                 </div>
                                 <div class="m-pane-section">
-                                    <img src="../../img/images/schedule/xingcheng5.png" >
+                                    <img src="../../img/images/schedule/xingcheng5.png" style="height: ">
                                     <div class="schedule-item-body">
-                                        <p>早上9：30出发离开凤凰古城，经2h汽车，3h动车返回武汉。</p>
-                                        <p>入住武汉丹枫白露酒店。</p>
+                                        <p>Pars à Wuhan 9 :30, transfert en bus tout confort climatisé (Environ 2 h) et TGV (3H).</p>
+                                        <p>Installer à votre hôtel au Royal Suites & Towers.</p>
                                     </div>
                                 </div>
                                 <div class="m-pane-section">
                                     <img src="../../img/images/schedule/xingcheng6.png" >
                                     <span class="schedule-item-body">
-                                    <p>早上7:30从酒店出发，返回巴黎。</p>
+                                    <p>Arrivée dans la journée à Paris CDG.</p>
                                 </span>
                                 </div>
                             </div>
@@ -253,7 +259,8 @@
                     <div role="tabpanel" class="m-pane" id="service">
                         <div class="service__container">
                             <div class="m-pane-title">
-                                <p>Nous vous assurer d'un service de première qualité：</p>
+                                <img src="../../img/images/others/2.png">
+                                <!--<p>Nous vous assurer d'un service de première qualité：</p>-->
                                 <!--<p>我们的中国之行所需的花费为<label class="fee">€2699</label>：</p>-->
                             </div>
                             <div class="m-pane-body">
