--- a/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/more.html
@@ -35,7 +35,7 @@
                     <div role="tabpanel" class="m-pane active" id="schedule">
                         <div class="schedule-container">
                             <div class="m-pane-title">
-                                <img src="../../img/images/others/1.png">
+                                <img class="titleImg" src="../../img/images/others/1.png">
                                 <!--<p>我是炫酷的标题文字：</p>-->
                                 <!--<p>Nous vous invitons à vivre les séjours luxe ainsi que les circuits à deux, en famille ou entre amis, à rythme de confort d'un véhicule privé ou TGV premium class, avec guide et chauffeur, hôtel haut de gamme.</p>-->
                             </div>
@@ -259,7 +259,7 @@
                     <div role="tabpanel" class="m-pane" id="service">
                         <div class="service__container">
                             <div class="m-pane-title">
-                                <img src="../../img/images/others/2.png">
+                                <img class="titleImg" src="../../img/images/others/2.png">
                                 <!--<p>Nous vous assurer d'un service de première qualité：</p>-->
                                 <!--<p>我们的中国之行所需的花费为<label class="fee">€2699</label>：</p>-->
                             </div>
@@ -699,6 +699,9 @@
                 <section></section>
             </div>
         </div>
+    </div>
+    <div id="modal-hotel-view">
+        <img class="modal-hotel-image" src="" />
     </div>
     <script src="../../js/javascripts/jquery-3.0.0.min.js"></script>
     <script src="../../js/javascripts/main.js"></script>
