--- a/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>人间仙境</title>
     <link rel="stylesheet" href="../../css/stylesheets/tao.css">
+    <link rel="stylesheet" href="../../css/email/default.css">
+    <link rel="stylesheet" href="../../css/email/normalize.css">
+    <link rel="stylesheet" href="../../css/email/set2.css">
+    <link rel="stylesheet" href="../../css/email/textareafullscreen.css">
 </head>
 <body>
     <div class="home-page">
@@ -74,23 +78,34 @@
                 </p>
                 <div class="home-contact-form">
                     <div class="contact-lside">
-                        <div class="contact-form-item">
-                            <label for="">发送信息给我们：</label>
-                            <input id="email" name="email" type="email">
-                        </div>
-                        <div class="contact-form-item">
-                            <label for="">您的联系方式：</label>
-                            <input id="phone" name="phone" type="email">
-                        </div>
-                        <div class="contact-form-item">
-                            <label for="">您的名字：</label>
-                            <input id="name" name="name" type="email">
-                        </div>
+                        <span class="input input--yoshiko">
+                            <input class="input__field input__field--yoshiko" id="email" name="email" type="email">
+                            <label class="input__label input__label--yoshiko" for="input-10">
+                                <span class="input__label-content input__label-content--yoshiko" data-content="Your Email">Your Email</span>
+                            </label>
+                        </span>
+                        <span class="input input--yoshiko">
+                            <input class="input__field input__field--yoshiko" id="phone" name="phone" type="email">
+                            <label class="input__label input__label--yoshiko" for="input-10">
+                                <span class="input__label-content input__label-content--yoshiko" data-content="Your Name">Your Phone</span>
+                            </label>
+                        </span>
+                        <span class="input input--yoshiko">
+                            <input class="input__field input__field--yoshiko" id="name" name="name" type="email">
+                            <label class="input__label input__label--yoshiko" for="input-10">
+                                <span class="input__label-content input__label-content--yoshiko" data-content="Your Name">Your Name</span>
+                            </label>
+                        </span>
                     </div>
                     <div class="contact-rside">
+                        <!--<div class="contact-form-item">-->
+                            <!--<label for="">你想反馈或查询的信息：</label>-->
+                            <!--<textarea name="content" id="content"></textarea>-->
+                            <!--<button type="button" onclick="sendEmail()">发送</button>-->
+                        <!--</div>-->
                         <div class="contact-form-item">
                             <label for="">你想反馈或查询的信息：</label>
-                            <textarea name="content" id="content"></textarea>
+                            <textarea  name="content" id="content"></textarea>
                             <button type="button" onclick="sendEmail()">发送</button>
                         </div>
                     </div>
@@ -103,7 +118,9 @@
     </div>
     <script src="../../js/javascripts/jquery-3.0.0.min.js"></script>
     <script src="../../js/javascripts/main.js"></script>
+    <script src="../../js/email/classie.js"></script>
     <script src="../../js/config.js"></script>
+    <script src="../../js/email/jquery.textareafullscreen.js"></script>
     <script>
         function sendEmail(){
             $.ajax({
@@ -115,6 +132,43 @@
                 success:function(data){//返回json结果
                 }});
         }
+
+        $(document).ready(function() {
+            $('#content').textareafullscreen();
+        });
+
+        (function () {
+            if (!String.prototype.trim) {
+                (function () {
+                    // Make sure we trim BOM and NBSP
+                    var rtrim = /^[\s\uFEFF\xA0]+|[\s\uFEFF\xA0]+$/g;
+                    String.prototype.trim = function () {
+                        return this.replace(rtrim, '');
+                    };
+                })();
+            }
+
+            [ ].slice.call(document.querySelectorAll('input.input__field')).forEach(function (inputEl) {
+                // in case the input is already filled..
+                if (inputEl.value.trim() !== '') {
+                    classie.add(inputEl.parentNode, 'input--filled');
+                }
+
+                // events:
+                inputEl.addEventListener('focus', onInputFocus);
+                inputEl.addEventListener('blur', onInputBlur);
+            });
+
+            function onInputFocus(ev) {
+                classie.add(ev.target.parentNode, 'input--filled');
+            }
+
+            function onInputBlur(ev) {
+                if (ev.target.value.trim() === '') {
+                    classie.remove(ev.target.parentNode, 'input--filled');
+                }
+            }
+        })();
     </script>
 </body>
 </html>
