--- a/com.cyt.music.webapp/src/main/webapp/screens/order/orderPay.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/order/orderPay.html
@@ -108,7 +108,8 @@
 <form class="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">
     <input type="hidden" name="cmd" value="_s-xclick">
     <input type="hidden" name="hosted_button_id" value="XN65M4S3NS5FL">
-    <input type="image" src="https://www.sandbox.paypal.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">
+    <!--<input type="image"  src="https://www.sandbox.paypal.com/zh_XC/C2/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">-->
+    <input type="image"  src="../../img/images/btn_buynowCC_LG.jpg" border="0" name="submit" alt="PayPal——最安全便捷的在线支付方式！">
 <img alt="" border="0" src="https://www.sandbox.paypal.com/zh_XC/i/scr/pixel.gif" width="1" height="1">
 </form>
 <!--<form class="paypal" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_top">-->
