--- a/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
+++ b/com.cyt.music.webapp/src/main/webapp/screens/main/index.html
@@ -36,28 +36,29 @@
         </section>
         <section class="home-section section-two">
             <div class="home-section-body">
-                <p class="home-brief-title">张家界豪华10天8晚游</p>
-                <p class="home-brief-title-second">价格：<label>€2699</label></p>
+                <!--<p class="home-brief-title">Zhangjiajie豪华10天8晚游</p>-->
+                <!--<p class="home-brief-title-second">价格：<label>€2699</label></p>-->\
+                <img src="../../img/images/others/prix_title.jpg">
                 <div class="home-brief-body">
                     <div class="home-brief-item">
                         <img src="../../img/images/home/1_08_194_194.png" >
-                        <span>五星级酒店</span>
+                        <span>Hôtel de luxe</span>
                     </div>
                     <div class="home-brief-item">
                         <img src="../../img/images/home/1_07_194_194.png" >
-                        <span>全程中国餐</span>
+                        <span>Gourmand chinois</span>
                     </div>
                     <div class="home-brief-item">
                         <img src="../../img/images/home/1_06_194_194.png" >
-                        <span>翻译服务</span>
+                        <span>Guides francophones privés</span>
                     </div>
-                    <div class="home-brief-item">
-                        <img src="../../img/images/home/1_05_194_194.png" >
-                        <span>全程陪同</span>
-                    </div>
+                    <!--<div class="home-brief-item">-->
+                        <!--<img src="../../img/images/home/1_05_194_194.png" >-->
+                        <!--<span>全程陪同</span>-->
+                    <!--</div>-->
                     <div class="home-brief-item">
                         <img src="../../img/images/home/1_04_194_194.png" >
-                        <span>单独成团</span>
+                        <span>Petits groups</span>
                     </div>
                 </div>
             </div>
@@ -72,28 +73,29 @@
         </section>
         <section class="home-section section-four">
             <div class="home-section-body">
-                <p class="home-brief-title">我是炫酷的标题</p>
+                <!--<p class="home-brief-title">我是炫酷的标题</p>-->
+                <img src="../../img/images/others/contact_us.jpg">
                 <p class="home-brief-text">
-                    我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容我是炫酷的内容
+                    Contactez-nous par email via le formulaire ci-dessous, nous vous répondrons sous un délai de 48 heures maximum.
                 </p>
                 <div class="home-contact-form">
                     <div class="contact-lside">
                         <span class="input input--yoshiko">
                             <input class="input__field input__field--yoshiko" id="email" name="email" type="email">
                             <label class="input__label input__label--yoshiko" for="input-10">
-                                <span class="input__label-content input__label-content--yoshiko" data-content="Your Email">Your Email</span>
+                                <span class="input__label-content input__label-content--yoshiko" data-content="Votre adresse e-mail">Votre adresse e-mail</span>
                             </label>
                         </span>
                         <span class="input input--yoshiko">
                             <input class="input__field input__field--yoshiko" id="phone" name="phone" type="email">
                             <label class="input__label input__label--yoshiko" for="input-10">
-                                <span class="input__label-content input__label-content--yoshiko" data-content="Your Name">Your Phone</span>
+                                <span class="input__label-content input__label-content--yoshiko" data-content="Votre nom et prénom">Votre nom et prénom</span>
                             </label>
                         </span>
                         <span class="input input--yoshiko">
                             <input class="input__field input__field--yoshiko" id="name" name="name" type="email">
                             <label class="input__label input__label--yoshiko" for="input-10">
-                                <span class="input__label-content input__label-content--yoshiko" data-content="Your Name">Your Name</span>
+                                <span class="input__label-content input__label-content--yoshiko" data-content="Votre numéro de contact">Votre numéro de contact</span>
                             </label>
                         </span>
                     </div>
@@ -104,7 +106,7 @@
                             <!--<button type="button" onclick="sendEmail()">发送</button>-->
                         <!--</div>-->
                         <div class="contact-form-item">
-                            <label for="">你想反馈或查询的信息：</label>
+                            <label for="">Votre message</label>
                             <textarea  name="content" id="content"></textarea>
                             <button type="button" onclick="sendEmail()">发送</button>
                         </div>
